# AO3

./: .gitattributes  .gitignore  CHANGELOG.md  DAM_feature_plan_v2.md  LICENSE  README.md  dam_debug_log_italics.json  dam_debug_log_standard.json  main.py  pyproject.toml  requirements.txt  run_studio.bat  setup_env.bat
app/: __init__.py
app/application/: composition.py  dam_service.py  dto.py  services.py  services.py.backup  services.py.backup_Solid
app/domain/: __init__.py  entities.py  enums.py  policies.py  ports.py
app/infrastructure/: __init__.py  images.py  lmstudio.py
app/infrastructure/ao3/: __init__.py  browser_fetch.py  client.py  models.py  parser.py
app/infrastructure/config/: __init__.py  paths.py
app/infrastructure/remote_stub/: __init__.py  client.py  contracts.py
app/infrastructure/sqlite/: __init__.py  database.py  repositories.py
app/presentation/: __init__.py
app/presentation/pages/: __init__.py
app/presentation/state/: __init__.py
app/presentation/ui/: __init__.py  app_shell.py  theme.py
tests/integration/: test_sqlite_repositories.py
tests/snapshots/: ao3_browse_sample.html  ao3_fandom_tag_sample.html  ao3_reader_download_sample.html  ao3_work_sample.html  test_ao3_parser.py
tests/unit/: test_dam_service.py  test_lmstudio_provider.py  test_policies.py  test_ui_style_helpers.py
